# MDDEM

./: .gitignore  CONFIG_REFERENCE.md  Cargo.toml  README.md  in.lammps  input  input_benchmark  lldb-debug.txt  log.lammps  schedule.dot  validate.sh
.github/workflows/: ci.yml
crates/dem_atom/: Cargo.toml  README.md
crates/dem_atom/src/: gpu.rs  insert.rs  lib.rs  radius.rs
crates/dem_atom_insert/: Cargo.toml  README.md
crates/dem_atom_insert/src/: lib.rs
crates/dem_bond/: Cargo.toml  README.md
crates/dem_bond/src/: lib.rs
crates/dem_clump/: Cargo.toml  README.md
crates/dem_clump/src/: body.rs  lib.rs
crates/dem_contact_analysis/: Cargo.toml  README.md
crates/dem_contact_analysis/src/: lib.rs
crates/dem_contact_stats/: Cargo.toml
crates/dem_contact_stats/src/: lib.rs
crates/dem_granular/: Cargo.toml  README.md
crates/dem_granular/src/: contact.rs  granular_temp.rs  lib.rs  normal.rs  rotational.rs  rotational_gpu.rs  rotational_viscous.rs  tangential.rs
crates/dem_gravity/: Cargo.toml  README.md
crates/dem_gravity/src/: lib.rs
crates/dem_measure_plane/: Cargo.toml  README.md
crates/dem_measure_plane/src/: lib.rs
crates/dem_thermal/: Cargo.toml  README.md
crates/dem_thermal/src/: lib.rs
crates/dem_velocity_distribution/: Cargo.toml
crates/dem_wall/: Cargo.toml  README.md
crates/dem_wall/src/: lib.rs
crates/md_bond/: Cargo.toml  README.md
crates/md_bond/src/: lib.rs
crates/md_langevin/: Cargo.toml
crates/md_langevin/src/: lib.rs
crates/md_lattice/: Cargo.toml  README.md
crates/md_lattice/src/: lib.rs
crates/md_lj/: Cargo.toml  README.md
crates/md_lj/src/: lib.rs
crates/md_measure/: Cargo.toml  README.md
crates/md_measure/src/: lib.rs
crates/md_msd/: Cargo.toml  README.md
crates/md_msd/src/: lib.rs
crates/md_polymer/: Cargo.toml  README.md
crates/md_polymer/src/: lib.rs
crates/md_thermostat/: Cargo.toml  README.md
crates/md_thermostat/src/: lib.rs
crates/md_type_rdf/: Cargo.toml  README.md
crates/md_type_rdf/src/: lib.rs
crates/md_water/: Cargo.toml
crates/mddem/: Cargo.toml  README.md
crates/mddem/src/: lib.rs
crates/mddem_app/: Cargo.toml  README.md
crates/mddem_app/src/: app.rs  lib.rs  plugin.rs  sub_app.rs
crates/mddem_core/: Cargo.toml  README.md
crates/mddem_core/src/: angle.rs  atom.rs  atom_gpu.rs  bond.rs  comm.rs  domain.rs  group.rs  lib.rs  neighbor.rs  pair_coeff.rs  region.rs  run.rs  schedule.rs  virial.rs
crates/mddem_core/src/input/: mod.rs  toml_input.rs
crates/mddem_deform/: Cargo.toml  README.md
crates/mddem_deform/src/: lib.rs
crates/mddem_derive/: Cargo.toml  README.md
crates/mddem_fire/: Cargo.toml  README.md
crates/mddem_fire/src/: lib.rs
crates/mddem_fixes/: Cargo.toml  README.md
crates/mddem_fixes/src/: lib.rs
crates/mddem_gpu/: Cargo.toml
crates/mddem_gpu/src/: atom_gpu.rs  lib.rs
crates/mddem_neighbor/: Cargo.toml  README.md
crates/mddem_neighbor/src/: lib.rs
crates/mddem_print/: Cargo.toml  README.md
crates/mddem_print/src/: lib.rs
crates/mddem_scheduler/: Cargo.toml  README.md
crates/mddem_test_utils/: Cargo.toml  README.md
crates/mddem_velocity_distribution/: Cargo.toml  README.md
crates/mddem_verlet/: Cargo.toml  README.md
crates/sim_app/: Cargo.toml  README.md
crates/sim_mpi/: Cargo.toml
crates/sim_scheduler/: Cargo.toml  README.md
data/: GranularTemp.txt  haff_analysis.py  plot_gtemp.py
docs/: shared_scheduler_presentation.md
examples/bench_beverloo_hopper/: README.md  config.toml  main.rs  plot.py  run_sweep.sh  validate.py
examples/bench_brazilian_disk/: README.md  config.toml  main.rs  plot.py  validate.py
examples/bench_clump_haff_cooling/: config.toml  config_mpi_8m.toml  main.rs
examples/bench_hertz_rebound/: .gitignore  README.md  config.toml  main.rs  run_sweep.py
examples/bench_lunar_regolith/: README.md  config.toml  config_earth_gamma0.000.toml  config_earth_gamma0.005.toml  config_earth_gamma0.020.toml  config_earth_gamma0.050.toml  config_lunar_gamma0.000.toml  config_lunar_gamma0.005.toml  config_lunar_gamma0.020.toml  config_lunar_gamma0.050.toml  main.rs  plot.py  run_benchmark.py  validate.py
examples/bench_multisphere_segregation/: README.md  config.toml  main.rs  plot.py  validate.py
examples/bench_rod_haff_cooling/: config.toml  main.rs
examples/bench_rotating_drum/: README.md  config.toml  config_mu02.toml  config_mu03.toml  config_mu05.toml  config_mu07.toml  main.rs  plot.py  validate.py
examples/bench_sphere_haff_cooling/: config.toml  main.rs
examples/bench_thermal_bed/: README.md  config.toml  main.rs  plot.py  validate.py
examples/bench_triaxial/: README.md  config_100kPa.toml  config_10kPa.toml  config_200kPa.toml  config_50kPa.toml  main.rs  plot.py  run_benchmark.sh  validate.py
examples/benchmark/: README.md  config.toml  main.rs
examples/bond_basic/: config.toml  main.rs
examples/bond_cantilever/: main.rs
examples/bond_fiber_tensile/: main.rs
examples/bond_mpi_drift/: main.rs
examples/cone_hopper/: config.toml  main.rs
examples/conveyor_belt/: config.toml  main.rs
examples/dem_benchmark/: config.toml  main.rs
examples/dem_compression/: README.md  config.toml  main.rs
examples/dem_triaxial/: config.toml  main.rs
examples/example_template/: config.toml  main.rs
examples/fire_packing/: config.toml  config_skip.toml  main.rs
examples/granular_basic/: README.md  config.toml  main.rs  validate_config.toml
examples/granular_basic_gpu/: config.toml  main.rs
examples/granular_gas_benchmark/: README.md  config_single.toml  haff_analysis.py  main.rs  run_2m_mpi.toml  run_2m_single.toml  run_debug.toml  validate_config.toml  validate_long_config.toml  validate_long_mpi_config.toml  validate_mpi_config.toml
examples/granular_gas_polydisperse/: config.toml  main.rs
examples/granular_gas_vdist/: config.toml  main.rs
examples/granular_shear/: config.toml  main.rs
examples/group_freeze/: config.toml  main.rs  validate.py
examples/hopper/: README.md  config.toml  main.rs  validate_config.toml  (+1 more)
src/: main.rs  mddem.rs
src/mddem/: fix.rs  (+9 more)
(+111 files in other folders)
