[package]
name = "mddem-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MDDEM simulation examples and binaries"
publish = false

[workspace]
members = [
  "crates/*",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/MDDEM"

[features]
default = ["mpi_backend"]
mpi_backend = ["mddem/mpi_backend", "dep:libffi-sys"]

[[example]]
name = "granular_basic"
path = "examples/granular_basic/main.rs"

[[example]]
name = "granular_gas_benchmark"
path = "examples/granular_gas_benchmark/main.rs"

[[example]]
name = "toml_single"
path = "examples/toml_single/main.rs"

[[example]]
name = "hopper"
path = "examples/hopper/main.rs"

[[example]]
name = "lj_argon"
path = "examples/lj_argon/main.rs"

[[example]]
name = "lj_performance"
path = "examples/lj_performance/main.rs"

[[example]]
name = "group_freeze"
path = "examples/group_freeze/main.rs"

[[example]]
name = "lj_langevin"
path = "examples/lj_langevin/main.rs"

[[example]]
name = "poiseuille_flow"
path = "examples/poiseuille_flow/main.rs"

[[example]]
name = "dem_compression"
path = "examples/dem_compression/main.rs"

[[example]]
name = "bond_basic"
path = "examples/bond_basic/main.rs"

[[example]]
name = "lj_per_atom_energy"
path = "examples/lj_per_atom_energy/main.rs"

[[example]]
name = "fire_packing"
path = "examples/fire_packing/main.rs"

[[example]]
name = "conveyor_belt"
path = "examples/conveyor_belt/main.rs"

[[example]]
name = "lj_type_rdf"
path = "examples/lj_type_rdf/main.rs"

[[example]]
name = "granular_shear"
path = "examples/granular_shear/main.rs"

[[example]]
name = "granular_gas_vdist"
path = "examples/granular_gas_vdist/main.rs"

[[example]]
name = "polymer_chain"
path = "examples/polymer_chain/main.rs"

[[example]]
name = "hopper_discharge"
path = "examples/hopper_discharge/main.rs"

[[example]]
name = "rotating_drum"
path = "examples/rotating_drum/main.rs"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
mddem = { path = "./crates/mddem", default-features = false }
dem_measure_plane = { path = "./crates/dem_measure_plane" }
md_type_rdf = { path = "./crates/md_type_rdf" }
mddem_derive = { path = "./crates/mddem_derive" }
mddem_fire = { path = "./crates/mddem_fire" }
mddem_velocity_distribution = { path = "./crates/mddem_velocity_distribution" }
mddem_scheduler = { path = "./crates/mddem_scheduler" }
# Force libffi-sys to use system libffi (via pkg-config) instead of building
# from source. libffi-sys 2.3.0 has a broken aarch64 macOS assembler; Homebrew
# libffi is set in .cargo/config.toml via PKG_CONFIG_PATH.
libffi-sys = { version = "2.3.0", features = ["system"], optional = true }
