[package]
name = "mddem-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MDDEM simulation examples and binaries"
publish = false

[workspace]
members = [
  "crates/*",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/MDDEM"

[features]
default = ["mpi_backend"]
mpi_backend = ["mddem/mpi_backend", "dep:libffi-sys"]

[[example]]
name = "granular_basic"
path = "examples/granular_basic/main.rs"

[[example]]
name = "granular_gas_benchmark"
path = "examples/granular_gas_benchmark/main.rs"

[[example]]
name = "hopper"
path = "examples/hopper/main.rs"

[[example]]
name = "lj_argon"
path = "examples/lj_argon/main.rs"

[[example]]
name = "bench_hertz_rebound"
path = "examples/bench_hertz_rebound/main.rs"

[[example]]
name = "bench_clump_haff_cooling"
path = "examples/bench_clump_haff_cooling/main.rs"

[[example]]
name = "bench_rod_haff_cooling"
path = "examples/bench_rod_haff_cooling/main.rs"

[[example]]
name = "bench_sphere_haff_cooling"
path = "examples/bench_sphere_haff_cooling/main.rs"

[[example]]
name = "bond_fiber_tensile"
path = "examples/bond_fiber_tensile/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
mddem = { path = "./crates/mddem", default-features = false }
dem_clump = { path = "./crates/dem_clump" }
dem_measure_plane = { path = "./crates/dem_measure_plane" }
md_type_rdf = { path = "./crates/md_type_rdf" }
md_msd = { path = "./crates/md_msd" }
mddem_derive = { path = "./crates/mddem_derive" }
mddem_fire = { path = "./crates/mddem_fire" }
mddem_velocity_distribution = { path = "./crates/mddem_velocity_distribution" }
mddem_deform = { path = "./crates/mddem_deform" }
sim_scheduler = { path = "./crates/sim_scheduler" }
# Force libffi-sys to use system libffi (via pkg-config) instead of building
# from source. libffi-sys 2.3.0 has a broken aarch64 macOS assembler; Homebrew
# libffi is set in .cargo/config.toml via PKG_CONFIG_PATH.
libffi-sys = { version = "2.3.0", features = ["system"], optional = true }
