[package]
name = "dem_atom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Per-atom DEM data (radius, density) with pack/unpack and MaterialTable for MDDEM"
keywords = ["dem", "atom", "material", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
mddem_derive = { path = "../mddem_derive" }
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5.1"
