[package]
name = "dem_atom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Per-atom DEM data (radius, density) with pack/unpack and MaterialTable for MDDEM"
keywords = ["dem", "atom", "material", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
mddem_derive = { path = "../mddem_derive" }
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5.1"
