[package]
name = "dem_atom_insert"
version = "0.1.0"
edition = "2021"

[dependencies]
mddem_core = { path = "../mddem_core", default-features = false }
mddem_app = { path = "../mddem_app" }
mddem_scheduler = { path = "../mddem_scheduler" }
dem_atom = { path = "../dem_atom" }
nalgebra = "0.33.2"
rand = "*"
rand_distr = "0.5.1"
serde = { version = "1", features = ["derive"] }
