[package]
name = "dem_atom_insert"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "DEM particle insertion with random placement and overlap checking for MDDEM"
keywords = ["dem", "particle", "insertion", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.2", default-features = false }
mddem_app = { path = "../mddem_app", version = "0.1.2" }
mddem_scheduler = { path = "../mddem_scheduler", version = "0.1.2" }
dem_atom = { path = "../dem_atom", version = "0.1.2" }
nalgebra = "0.33.2"
rand = "0.9"
rand_distr = "0.5.1"
serde = { version = "1", features = ["derive"] }
