[package]
name = "dem_bond"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bond force models for MDDEM: elastic bonds, breakable bonds, sintering"

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
mddem_print = { path = "../mddem_print", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
