[package]
name = "dem_clump"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multisphere/clump rigid body composites for non-spherical DEM particles"

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
mddem_derive = { path = "../mddem_derive", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"

[features]
default = []
mpi_backend = ["mddem_core/mpi_backend"]

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
