[package]
name = "dem_contact_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DEM contact analysis: per-contact force output, coordination number, and fabric tensor"
keywords = ["dem", "contact", "force-chain", "fabric-tensor"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
mddem_print = { path = "../mddem_print", version = "0.1.3" }
mddem_derive = { path = "../mddem_derive", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
