[package]
name = "dem_contact_stats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-atom coordination number and contact statistics for DEM particles in MDDEM"
keywords = ["dem", "coordination", "contacts", "jamming"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
mddem_app = { path = "../mddem_app", version = "0.1.3" }
mddem_scheduler = { path = "../mddem_scheduler", version = "0.1.3" }
mddem_derive = { path = "../mddem_derive" }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
mddem_print = { path = "../mddem_print", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
