[package]
name = "dem_granular"
version = "0.1.0"
edition = "2021"

[dependencies]
mddem_core = { path = "../mddem_core", default-features = false }
mddem_neighbor = { path = "../mddem_neighbor" }
mddem_app = { path = "../mddem_app" }
mddem_scheduler = { path = "../mddem_scheduler" }
dem_atom = { path = "../dem_atom" }
dem_atom_insert = { path = "../dem_atom_insert" }
nalgebra = "0.33.2"
