[package]
name = "dem_granular"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Granular physics for MDDEM: Hertz normal contact, Mindlin tangential friction, rotational dynamics"
keywords = ["dem", "hertz", "granular", "contact"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
mddem_app = { path = "../mddem_app", version = "0.1.3" }
mddem_scheduler = { path = "../mddem_scheduler", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
mddem_verlet = { path = "../mddem_verlet", version = "0.1.3" }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
