[package]
name = "dem_granular"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Granular physics for MDDEM: Hertz normal contact, Mindlin tangential friction, rotational dynamics"
keywords = ["dem", "hertz", "granular", "contact"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
mddem_verlet = { path = "../mddem_verlet", version = "0.1.3" }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
