[package]
name = "dem_gravity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Configurable gravity body force plugin for MDDEM simulations"
keywords = ["dem", "gravity", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
mddem_app = { path = "../mddem_app", version = "0.1.3" }
mddem_scheduler = { path = "../mddem_scheduler", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
