[package]
name = "dem_measure_plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "General-purpose measurement plane plugin for counting particle crossings and mass flow rates in MDDEM simulations"
keywords = ["dem", "measurement", "throughput", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
mddem_print = { path = "../mddem_print", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
