[package]
name = "dem_thermal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Contact-based heat conduction for DEM particles in MDDEM"
keywords = ["dem", "thermal", "heat", "conduction"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
sim_app = { path = "../sim_app", version = "0.1.3" }
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
mddem_derive = { path = "../mddem_derive" }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
dem_wall = { path = "../dem_wall", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
