[package]
name = "dem_thermal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Contact-based heat conduction for DEM particles in MDDEM"
keywords = ["dem", "thermal", "heat", "conduction"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
mddem_derive = { path = "../mddem_derive" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
dem_wall = { path = "../dem_wall", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
