[package]
name = "dem_wall"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "General plane wall contact forces with Hertz repulsion for MDDEM simulations"
keywords = ["dem", "wall", "contact", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
sim_app = { path = "../sim_app", version = "0.1.3" }
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
