[package]
name = "md_bond"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MD bond potentials (harmonic, FENE) for MDDEM bead-spring models"
keywords = ["bond", "fene", "harmonic", "molecular-dynamics"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
sim_app = { path = "../sim_app", version = "0.1.3" }
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
