[package]
name = "md_lattice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "FCC lattice initialization with Maxwell-Boltzmann velocities for MDDEM"
keywords = ["lattice", "fcc", "molecular-dynamics", "initialization"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
sim_app = { path = "../sim_app", version = "0.1.3" }
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
