[package]
name = "md_lattice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "FCC lattice initialization with Maxwell-Boltzmann velocities for MDDEM"
keywords = ["lattice", "fcc", "molecular-dynamics", "initialization"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
