[package]
name = "md_lj"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Lennard-Jones 12-6 pair force with virial accumulator and tail corrections for MDDEM"
keywords = ["lennard-jones", "molecular-dynamics", "lj", "pair-potential"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
serde = { version = "1", features = ["derive"] }
