[package]
name = "md_measure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Measurement tools for MDDEM: radial distribution function (RDF), mean square displacement (MSD), and virial pressure"
keywords = ["rdf", "msd", "pressure", "molecular-dynamics"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
md_lj = { path = "../md_lj", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
