[package]
name = "md_msd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-type mean-squared displacement (MSD) plugin for MDDEM with diffusion coefficient output"
keywords = ["msd", "diffusion", "molecular-dynamics", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
serde = { version = "1", features = ["derive"] }
